kubernetes/apps/vpn/vpn-gateway/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# This policy allows the vpn-gateway to go out to the internet on port 1637 and also to talk to any cluster entities
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway
  labels:
    app.kubernetes.io/instance: &instance vpn-gateway
    app.kubernetes.io/name: &name pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/name: *name
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            # Allow DNS
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
        - ports:
            - port: "1194"
              protocol: UDP
            - port: "1197"
              protocol: UDP
    - toEntities:
        - cluster

    # We are explicitly allowing access to Kube DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - icmps:
        - fields:
            - type: 8
              family: IPv4
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# This policy allows the vpn-gateway to communicate over the VXLAN port 4789
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway-vxlan
  labels:
    app.kubernetes.io/instance: &instance vpn-gateway
    app.kubernetes.io/name: &name pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/name: *name
  egress:
    - toPorts:
        - ports:
            - port: "4789"
              protocol: UDP
  ingress:
    - toPorts:
        - ports:
            - port: "4789"
              protocol: UDP
    - icmps:
        - fields:
            - type: 8
              family: IPv4
